- Import working 100% - fixed some minor bugs - added unknown support for every element (except Coordinates/GraphicsInfos which need to be discussed). - i18n completed

--- a/editor/server/src/de/hpi/bpmn2xpdl/TODO.txt
+++ b/editor/server/src/de/hpi/bpmn2xpdl/TODO.txt
@@ -1,15 +1,11 @@
 ﻿- outgoing-key (Source Target)
 - tasktypes
-- i18n strings fürs plugin
 
 =========================================================
 ========                  IMPORT                 ========
 =========================================================
 
-- strip xml tag
-- strip xml namespaces
-- intermediate multiples
-- Generell in flows target/sources
+- Generell in flows: target/sources
 - Coordinatesunknowns?!
 - andere node/connector infos storen?
 - object im workflowprocess/pool
